standardizing & cleaning project pages

--- a/armour.html
+++ b/armour.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-
-</head>
+<head></head>
 <body>
-    <section class="top sticky">
-        <a class="name">Mikki</a>
-<!---------------------project title—change meeeeee---------------------------------->
+    <section class="top">
+    <a class="name"></a>
     <a class="projectTitle">Armour Magazine</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
 <section id="project" style="display:none">
@@ -66,16 +53,12 @@
             <a class="flip" href="index.html">Back</a>
             <a class="flip" href="reflections.html">Next</a>
         </div>
-</section>
 
-    <script type="text/javascript">const title= "Armour Magazine";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-    <section class="bottom sticky">
-    <a class="flip" href="https://www.instagram.com/_miikki/" target="_blank">Instagram</a>
-    <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
-    <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
-    </section>
+</section>
+<section class="bottom"></section>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
