--- a/community.html
+++ b/community.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="community/cover.jpg">
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-</head>
+<head></head>
 <body>
     <section class="top">
         <a class="name"></a>
@@ -21,6 +9,7 @@
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
+
     <div id="hero">
         <img src="community/cover.jpg">
     </div>
@@ -28,7 +17,7 @@
         <p><i>A Community is a Garden</i> is a toolkit for artistic practice towards grassroots change. Filled with interviews, exercises, and prompts for reflection, the book is an accessible resource for artists, communities, and institutions looking to build and strengthen long-term partnerships.</p>
         <p>This book was developed over the course of the inaugural Summer Research Practicum at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum.</a> You can read, print, and share it for free at <a href="https://arena-attachments.s3.amazonaws.com/9400568/b17b697286cc21f202f2f8458bdbc35b.pdf?1604622316" target="_blank">bit.ly/CommunityGardenToolkit</a>.</p>
     <p>A collective effort with Kanyinsola Anifowoshe, <a href="jordanjweber.com" target="_blank">Jordan Weber</a>, <a href="https://arthistory.wustl.edu/people/ila-sheren" target="_blank">Ila N. Sheren</a>, <a href="brianharnetty.com" target="_blank">Brian Harnetty</a>, Cheryl Blosser, Efe Igor, <a href="birdcloset.com" target="_blank">Bird Closet</a>, <a href="genomicgastronomy.com" target="_blank">Center for Genomic Gastronomy</a>, Rob Gee, Alicia Gee, Syd Gee, <a href="prestoncthompson.com" target="_blank">Preston Thompson</a>, <a href="http://jackiiepopjes.com/" target="_blank">and Jackiie Popjes</a>.</p></div>
-</div>
+    </div>
 
     <div id="gallery">
             <img src="community/contents.jpg">
@@ -74,5 +63,4 @@
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
 </body>
-
 </html>
