--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/favicon-02.png"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"></a>
-    <link rel="stylesheet" href="css/style.css">
-
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
-
-</head>
+<head></head>
 <body>
 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
@@ -31,20 +19,20 @@
         <section class="clients">
            <div class="col1">
             <p style="opacity:.6; margin-bottom:4px;">Select Clients</p>
-            <a href="https://theglasshouse.org" target="_blank">The Glass House</a><br>
-            <a href="https://jewishcurrents.org" target="_blank">Jewish Currents</a><br>
+            <a href="https://cueartfoundation.org" target="_blank">CUE Art Foundation</a><br>
+            <a href="https://thebaffler.com" target="_blank">The Baffler</a><br>
             <a href="https://undocumentedmigrationproject.org" target="_blank">Undocumented Migration Project</a><br>
             <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
-            Princeton University
+            <a href="https://princeton.edu" target="_blank">Princeton University</a>
            </div>
               
            <div class="col2">
             <p style="opacity:0; margin-bottom:4px;">Select Clients</p>
-            Lea Architecture<br>
+            <a href="https://lea-architecture.com" target="_blank">Lea Architecture</a><br>
             <a href="https://nike.com" target="_blank">Nike</a><br>
             <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
-            <a href="https://www.instagram.com/mall.nyc/" target="_blank">Mall NYC</a><br>
-            Zone 6 Management
+            <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a><br>
+            <a href="https://zone6mgmt.com" target="_blank">Zone 6 Management</a>
            </div>
         </section>
 </div>
