--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-
-</head>
+<head></head>
 <body>
-    <section class="top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Reconna Typeface</a>
-    <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
@@ -54,7 +41,7 @@
         </div>
         </section>
 
-        <script type="text/javascript">const title= "Reconna Typeface";</script>
+
         <script>
             var slider = document.getElementById('font-size');
       
