--- a/reflections.html
+++ b/reflections.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-
-</head>
+<head></head>
 <body>
     <section class="top">
         <a class="name"></a>
@@ -20,6 +9,7 @@
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
     <section id="project" style="display:none">
+        
     <div id="hero">
             <img src="reflections/IMG_6544-copy.jpg">
             <div id="label"><span class="labelita">Reflections on Practice</span><span class="labelreg">2019</span></div>
@@ -53,9 +43,9 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="majorarcana.html">Next</a>
         </div>
-        </section>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+</section>
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
