--- a/spaceopera.html
+++ b/spaceopera.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-</head>
+<head></head>
 <body>
-    <!--<div class="querytown"></div>-->
     <section class="top sticky">
         <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Space Opera</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" class="wintersessionpage" style="display:none">
+   <section id="project" style="display:none">
 
     <div id="hero">
         <img src="spaceopera/spaceopera1.jpeg">  
-          <!--  <div id="label"><span class="labelita">Space Opera</span><span class="labelreg">2022</span></div>-->
     </div>
     <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. The simple design uses found footage from the Apollo Missions.</p><p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</a>.</p></div>
 </div>
@@ -40,12 +24,10 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="transientgrounds.html">Next</a>
         </div>
-        </section>
-
-        <script type="text/javascript">const title= "Cyberotica";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
+<!--<div class="querytown"></div>-->
 <section class="bottom"></section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
