--- a/tci5.html
+++ b/tci5.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-</head>
+<head></head>
 <body>
-    <!--<div class="querytown"></div>-->
-    <section class="top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">TCI Turns 5</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
@@ -56,10 +41,11 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="reconnatypeface.html">Next</a>
         </div>
-        </section>
+
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
+<!--<div class="querytown"></div>-->
 <section class="bottom"></section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
