--- a/transientgrounds.html
+++ b/transientgrounds.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-</head>
+<head></head>
 <body>
-    <!--<div class="querytown"></div>-->
     <section class="top sticky">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Transient Grounds</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
-   <section id="project" class="cyberoticapage" style="display:none">
+   <section id="project" style="display:none">
 
     <div id="hero">
         <img src="transientgrounds/subwayposter2.png">  
@@ -46,10 +31,10 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="cyberotica.html">Next</a>
         </div>
-        </section>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
-
+</section>
+<!--<div class="querytown"></div>-->
 <section class="bottom"></section>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
