--- a/quarterly.html
+++ b/quarterly.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>mikki.studio</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
-
-</head>
+<head></head>
 <body>
-    <section class="top sticky">
+    <section class="top">
     <a class="name"></a>
-<!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Post-Science Quarterly</a>
-     <!--<a class="flip index">Index</a>-->
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
-    <section id="project" class="soundscapespage" style="display:none">
+    <section id="project" style="display:none">
 
 
     <div id="hero">
@@ -62,11 +49,9 @@
             <a class="flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="mariovoid.html">Next</a>
         </div>
-        </section>
 
-        <script type="text/javascript">const title= "Post-Science Quarterly";</script>
-   
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+</section>
 <section class="bottom"></section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
