cleanest ever / created new pages

--- a/mhns.html
+++ b/mhns.html
@@ -5,12 +5,12 @@
 <body>
     <section class="top">
         <a class="name"></a>
-        <a class="projectTitle">A Community is a Garden</a>
+        <a class="projectTitle">Money Has No Smell</a>
     </section>
 
     <section id="project" style="display:none">
-<!--------------------------insert project information in this section ONLY----------------------->
 
+<!--------------------------insert project information below this line----------------------->
     <div id="hero">
         <img src="community/cover.jpg">
     </div>
@@ -54,8 +54,8 @@
             <a class="backbtn flip">Back</a>
             <a class="flip" href="nytimes.html">Next</a>
         </div>
-   
-<!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+
+<!--------------------------end of project-specific code------------------------->
 </section>
  <section class="bottom"></section>
 
