--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <section id="fullindex">
 <div id="aboutContainer">
     <div id="about" style="display:none;">
-        <a class="name"></a>
+        <a class="name indexname"></a>
        <div class="p"><p>Mikki Janower is a designer, researcher, and creative coder logging on from Brooklyn, New York. She builds visual systems and storytelling tools for collaborators across media, music, education, and the arts.</div>
         <section class = "twocols">
             <div class="contact"><p style="opacity:.6; margin-bottom:4px;">Contact</p><a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><!--<br><a href="https://www.goodreads.com/user/show/95316335-mikki-janower" target = "_blank">Goodreads</a><br>--></div>
