fixed loading issue

--- a/community.html
+++ b/community.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css">
+</head>
 
 <body>
     <section class="top">
@@ -51,7 +53,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="backbtn flip">Back</a>
+            <a class="backbtn flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="nytimes.html">Next</a>
         </div>
 
