--- a/cyberotica.html
+++ b/cyberotica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 <body>
     <section class="top">
     <a class="name"></a>
@@ -51,7 +51,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="backbtn flip">Back</a>
+            <a class="backbtn flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="joshualeifer.html">Next</a>
         </div>
 
