--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 <body>
 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
