--- a/reflections.html
+++ b/reflections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 <body>
     <section class="top">
         <a class="name"></a>
@@ -9,7 +9,7 @@
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
     <section id="project" style="display:none">
-        
+
     <div id="hero">
             <img src="reflections/IMG_6544-copy.jpg">
             <div id="label"><span class="labelita">Reflections on Practice</span><span class="labelreg">2019</span></div>
