--- a/armour.html
+++ b/armour.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 <body>
     <section class="top">
     <a class="name"></a>
@@ -50,7 +50,7 @@
     </section>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip backbtn" href="javascript:history.back()">Back</a>
             <a class="flip" href="reflections.html">Next</a>
         </div>
 
