--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 <body>
     <section class="top">
     <a class="name"></a>
@@ -10,7 +10,7 @@
 
 <!--------------------------insert project information in this section ONLY----------------------->
     <section id="project" style="display:none">
-        
+
     <div id="hero">
         <img src="discoveryourair/Bumper-Sticker.jpg">
         <div id="label"><span class="labelita">Nike: Discover Your Air</span><span class="labelreg">2018</span></div>
