--- a/mariovoid.html
+++ b/mariovoid.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 
 <body>
     <section class="top">
