--- a/nytimes.html
+++ b/nytimes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head></head>
+<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
 <body>
     <section class="top">
     <a class="name"></a>
@@ -69,7 +69,7 @@
 
 
         <div id="projfooter">
-            <a class="flip" href="javascript:history.back()">Back</a>
+            <a class="backbtn flip" href="javascript:history.back()">Back</a>
             <a class="flip" href="spaceopera.html">Next</a>
         </div>
    
