caption / credit / label overhaul

--- a/community.html
+++ b/community.html
@@ -29,9 +29,8 @@
                 <img src="community/20-21.jpg">
                 <img src="community/14-15.jpg">  
             </div>
-            <div><img src="community/12-13.jpg">
-                <div id="label"><span class="caption"><i>Font in use: Minipax</i></span><span class="citation">Raphaël Ronot for Velvetyle Type Foundry</span></div>
-            </div>
+            <img src="community/12-13.jpg">
+            <div class="caption"><i>A Community is a Garden</i>, 2020.<span class="citation">Typeset in Minipax, designed by Raphaël Ronot for Velvetyne Type Foundry</span></div>
             <div class="triptych">
                 <img src="community/44-45.jpg">
                 <img src="community/48-49.jpg">
