--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 <div class="more">
-  <h3>Looking for something? <a href = "mailto:info@mikki.studio">ask away :)</a> </h3> <h3>Janower 2022</h3>
+  <p>Looking for something? <a href = "mailto:info@mikki.studio">ask away :)</a> </p> <p>Design and development: Mikki Janower, 2022</p>
 </div>
 
 <!-----------------scripts and end tags below — do not touch---------->
