--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -18,7 +18,7 @@
 
     <div id="gallery">
         <img src="joshualeifer/jleifer1.png">
-        <div id="label"><span class="caption">Joshua Leifer dotcom</span><span class="citation">2020</span></div>
+        <div class="caption">Joshua Leifer dotcom, 2020</div>
         <img src="joshualeifer/jleifer-12.png">
         <div class="diptych">
             <img src="joshualeifer/jleifer-08.png">  
