--- a/mariovoid.html
+++ b/mariovoid.html
@@ -20,7 +20,7 @@
 
     <div id="gallery">
         <img src="mariovoid/thumbnail.png">
-        <div id="label"><span class="caption">Super Mario Void</span><span class="citation">2019</span></div>
+        <div id="label"><span class="caption">Super Mario Void, 2019</span></div>
         <img src="mariovoid/smv4.png">
         <img src="mariovoid/smv1.png">
         <img src="mariovoid/smv2.png">
