--- a/postcursor.html
+++ b/postcursor.html
@@ -20,7 +20,7 @@
 
     <div id="gallery">
         <img src="postcursor/postcursor-01.png">
-        <div id="label"><span class="caption">Postcursor / Starrynite</span><span class="citation">2020</span></div>
+        <div class="caption"><i>Postcursor / Starrynite</i>, 2020.</div>
         <div class="diptych">
             <img src="postcursor/postcursor-02.png">  
             <img src="postcursor/postcursor-04.png">
