--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -24,7 +24,7 @@
         
     <div id="gallery">
         <img src="reconna/reconna screenie.png">
-            <div id="label"><span class="caption">Reconna Typeface</span><span class="citation">2019</span></div>
+            <div class="caption">Reconna Typeface, 2019</div>
         <img src="reconna/IMG_1271-2.jpg">
         <img src="reconna/IMG_1247-2.jpg">
         <img src="reconna/IMG_1234-2.jpg">
