--- a/reflections.html
+++ b/reflections.html
@@ -17,7 +17,7 @@
 
     <div id="gallery">
         <img src="reflections/IMG_6544-copy.jpg">
-        <div id="label"><span class="caption">Reflections on Practice</span><span class="citation">2019</span></div>
+        <div class="caption"><i>Reflections on Practice</i>, 2019</div>
         <img src="reflections/IMG_6714-copy.jpg">
         <div class="diptych">
             <img src="reflections/IMG_6642-copy.jpg">
