--- a/sober21.html
+++ b/sober21.html
@@ -22,7 +22,7 @@
             <img src="sober21/IMG_6445 copy.jpg">  
             <img src="sober21/IMG_6476.jpg">
         </div>
-        <div id="label"><span class="caption">Sober 21</span><span class="citation">2021</span></div>
+        <div class="caption"><i>Sober 21</i>, 2021</div>
             <img src="sober21/Sober 21 40 copy.png">
             <img src="sober21/Sober21 72 copy.png">
             <div class="diptych">
