--- a/transientgrounds.html
+++ b/transientgrounds.html
@@ -18,7 +18,7 @@
 
     <div id="gallery">
         <img src="transientgrounds/subwayposter2.png">  
-        <div id="label"><span class="caption">Transient Grounds</span><span class="citation">2021</span></div>
+        <div class="caption">Poster for <i>Transient Grounds</i>, 2021</div>
         <img src="transientgrounds/subwayposter1.png">
         <img src="transientgrounds/poster.png">  
             <img src="transientgrounds/banner.png">
