--- a/cyberotica.html
+++ b/cyberotica.html
@@ -18,7 +18,7 @@
 
     <div id="gallery">
         <img src="cyberotica/radicallove.jpg">  
-        <div id="label"><span class="caption"><i>Cyberotica: Technology and Fetish in Contemporary Art</i></span><span class="citation">2020</span></div>
+        <div class="caption"><i>Cyberotica: Technology and Fetish in Contemporary Art,</i> 2020</div>
         <img src="cyberotica/factoryofthesun2.jpg">  
             <img src="cyberotica/foreword.jpg">
         <div class="diptych">
