a little more cleaning, new sharing images and meta covers

--- a/community.html
+++ b/community.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: A Community is a Garden</title>
+    <meta property="og:image" content="community/cover.jpg">
 </head>
 
 <body>
