--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <meta property="og:image" content="assets/social_share2.png">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+</head>
 <body>
 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
