--- a/mariovoid.html
+++ b/mariovoid.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Super Mario Void</title>
+    <meta property="og:image" content="mariovoid/smv4.png">
+</head>
 
 <body>
     <section class="top">
@@ -20,7 +27,7 @@
 
     <div id="gallery">
         <img src="mariovoid/thumbnail.png">
-        <div id="label"><span class="caption">Super Mario Void, 2019</span></div>
+        <div class="caption">Super Mario Void, 2019</div>
         <img src="mariovoid/smv4.png">
         <img src="mariovoid/smv1.png">
         <img src="mariovoid/smv2.png">
