--- a/mhns.html
+++ b/mhns.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Money Has No Smell</title>
+    <meta property="og:image" content="mhns/mhns.png">
+</head>
 
 <body>
     <section class="top">
