--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Reconna Typeface</title>
+    <meta property="og:image" content="reconna/reconna screenie.png">
+</head>
 <body>
     <section class="top">
     <a class="name"></a>
@@ -54,7 +61,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
