--- a/sober21.html
+++ b/sober21.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Sober 21</title>
+    <meta property="og:image" content="sober21/IMG_6556.jpg">
+</head>
 <body>
     <section class="top">
         <a class="name"></a>
