--- a/cyberotica.html
+++ b/cyberotica.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Cyberotica</title>
+    <meta property="og:image" content="cyberotica/radicallove.jpg">
+</head>
 <body>
     <section class="top">
     <a class="name"></a>
@@ -62,7 +69,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
