--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head><link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Joshua Leifer</title>
+    <meta property="og:image" content="joshualeifer/jleifer1.png">
+</head>
 
 <body>
     <section class="top sticky">
@@ -41,7 +47,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
