--- a/nytimes.html
+++ b/nytimes.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: The New York Times</title>
+    <meta property="og:image" content="nytimes/nyt15.png">
+</head>
 <body>
     <section class="top">
     <a class="name"></a>
-    <a class="projectTitle">The New York Times: Design and AD</a>
+    <a class="projectTitle">The New York Times</a>
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
@@ -77,7 +84,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
