--- a/reflections.html
+++ b/reflections.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="css/projects.css"></head>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
+
+    <title>mikki.studio: Reflections on Practice</title>
+    <meta property="og:image" content="reflections/IMG_6544-copy.jpg">
+</head>
 <body>
     <section class="top">
         <a class="name"></a>
@@ -48,7 +55,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
